--- a/templates/base.html
+++ b/templates/base.html
@@ -608,7 +608,7 @@ var resultac = document.getElementById('result').style.display= "none";
 {% endif %}
 
 <div class="has-submenu">
-<a class="menu-item" href="/ver%todo/">
+<a class="menu-item" href="/vertodo/">
 <em>Películas</em>
 </a>
 </div>
@@ -1304,7 +1304,7 @@ var load = false
              
             </li>
             <li class="dropdown first">
-              <a href="/ver%todo/" {% if not series_filt and not blog and not inicio and not user_details and not user_favoritos and not series_fav and not amigosview and not actividad and not notificaciones %} style="color:#D3F13E;"{% endif %} >
+              <a href="/vertodo/" {% if not series_filt and not blog and not inicio and not user_details and not user_favoritos and not series_fav and not amigosview and not actividad and not notificaciones %} style="color:#D3F13E;"{% endif %} >
               Películas
               </a>
               
