--- a/templates/index.html
+++ b/templates/index.html
@@ -162,7 +162,7 @@ background: linear-gradient(to left, #0b8793, #360033); /* W3C, IE 10+/ Edge, Fi
 			<div class="col-md-8">
 				<div class="title-hd">
 					<h2>Películas</h2>
-					<a href="/ver%todo/" class="viewall">Ver todo<i class="fa fa-long-arrow-right point"></i></a>
+					<a href="/vertodo/" class="viewall">Ver todo<i class="fa fa-long-arrow-right point"></i></a>
 				</div>
 				<div class="tabs">
 					<ul class="tab-links" style="text-transform: uppercase;">
@@ -1202,7 +1202,7 @@ $('#tabcontentin').append('<div id="zzz'+value.id+'"  class="slide-it" style="wi
 							</div>
 						</div>
 						</div>
-						<a href="/ver%todo/" class="btn">Ver todas las películas<i class="fa fa-long-arrow-right point"></i>   </a>
+						<a href="/vertodo/" class="btn">Ver todas las películas<i class="fa fa-long-arrow-right point"></i>   </a>
 					</div>
 				</div>
 			</div>
