--- a/templates/blogdetail.html
+++ b/templates/blogdetail.html
@@ -519,6 +519,7 @@ function update_ans(b) {
 					<div id="contenter">
 						
 										{{blogg.contenido|safe}}
+										<img src="https://s3-us-west-1.amazonaws.com/waomovies/media/1GsJRXXMh4lvdZPCMFLU2sGu0id.jpg.gz">
 					
 				</div>
 
