--- a/templates/generoview.html
+++ b/templates/generoview.html
@@ -458,7 +458,7 @@
 				<div class="flex-wrap-movielist mv-grid-fw">
 					{% for o in peliculas %}
 						<div class="movie-item-style-2 movie-item-style-1">
-							<img src="{{ o.Cover.url }}" alt="">
+							<img src="{{ o.Coverimg }}" alt="">
 							{% include 'ajax.html' %}
 							<div class="mv-item-infor">
 								<h6><a href="#">{{ o.titulo }}</a></h6>
