--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
   <meta name="format-detection" content="telephone-no">
 
   <link rel="stylesheet" href="{% static 'css/plugins.css' %}">
-<link rel="stylesheet" type="text/css" href="https://s3-us-west-1.amazonaws.com/waomovies/static/css/style.css">
+<link rel="stylesheet" type="text/css" href="https://d11nqwgsnjp6i8.cloudfront.net/static/css/style.css">
   <!--link rel="stylesheet" href="{% static 'css/style.css' %}"-->
   <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
 
