--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <meta name="description" content="Ver peliculas en hd">
     <meta name="description" content="Ver peliculas completas en hd">
     <meta name="description" content="waomovies">
-
+{% block meta %}<meta name="description" content="Peliculas hd">{% endblock %}
 
 
     <title>WaoMovies</title>
