--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -1167,7 +1167,7 @@ $(this).remove();
 
 </style>
 {% if peliculaa.portada %}
-<div class="hero mv-single-hero" style="background: url({{ peliculaa.portada.url  }}) no-repeat;
+<div class="hero mv-single-hero" style="background: url({{ peliculaa.PortadaImg  }}) no-repeat;
   height: 598px; background-position: center;
                       text-align: center;
                       background-size: cover;
