--- a/templates/moviesingle.html
+++ b/templates/moviesingle.html
@@ -2427,7 +2427,7 @@ input[type="button"].btn-block {
             </div>
 
             {% if peliculaa.portada %}
-        <img src="{{ peliculaa.portada.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
+        <img src="{{ peliculaa.Portadaimg }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% else %}
@@ -2463,7 +2463,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
                 </ul>
             </div>
         {% if peliculaa.portada %}
-        <img src="{{ peliculaa.portada.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
+        <img src="{{ peliculaa.Portadaimg }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% else %}
@@ -2497,7 +2497,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
                 </ul>
             </div>
         {% if peliculaa.portada %}
-        <img src="{{ peliculaa.portada.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
+        <img src="{{ peliculaa.Portadaimg }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% else %}
@@ -2530,7 +2530,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
                 </ul>
             </div>
         {% if peliculaa.portada %}
-        <img src="{{ peliculaa.portada.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
+        <img src="{{ peliculaa.Portadaimg }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% else %}
@@ -2562,7 +2562,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
                 </ul>
             </div>
         {% if peliculaa.portada %}
-        <img src="{{ peliculaa.portada.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
+        <img src="{{ peliculaa.Portadaimg }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% else %}
@@ -2593,7 +2593,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
 
                 </ul>
             </div>
-        <img src="{{ peliculaa.portada.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px) blur(1px);
+        <img src="{{ peliculaa.Portadaimg }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px) blur(1px);
 filter: brightness(50%) blur(2px) blur(1px);" class="imgplay">
         <input type="hidden" name="server" value="streamcloud">
         <span class="duraciondata">Duración: {{ peliculaa.run_time }}min</span>
@@ -2618,7 +2618,7 @@ filter: brightness(50%) blur(2px) blur(1px);" class="imgplay">
                 </ul>
             </div>
         {% if peliculaa.portada %}
-        <img src="{{ peliculaa.portada.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
+        <img src="{{ peliculaa.Portadaimg }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% else %}
@@ -2649,7 +2649,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
                 </ul>
             </div>
         {% if peliculaa.portada %}
-        <img src="{{ peliculaa.portada.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
+        <img src="{{ peliculaa.Portadaimg }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% else %}
@@ -2681,7 +2681,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
                 </ul>
             </div>
         {% if peliculaa.portada %}
-        <img src="{{ peliculaa.portada.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
+        <img src="{{ peliculaa.Portadaimg }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% else %}
@@ -2713,7 +2713,7 @@ filter: brightness(50%) blur(2px);" class="imgplay">
                 </ul>
             </div>
         {% if peliculaa.portada %}
-        <img src="{{ peliculaa.portada.url }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
+        <img src="{{ peliculaa.Portadaimg }}" style="width: 100%; position: relative; -webkit-filter: brightness(50%) blur(2px);
 
 filter: brightness(50%) blur(2px);" class="imgplay">
 {% else %}
